# PatternAn

./: CMakeLists.txt  main.cpp  qml.qrc
Resources/qml/: MainWindow.qml
Source/: Person.cpp  Person.h  Segment.cpp  Segment.h  Statistics.cpp  Statistics.h  driveWorker.cpp  driveWorker.h
